module/core/former/tests/inc/enum_tests/enum_named_tests/compile_fail/struct_zero_default_error.rs
#[ derive( Debug, PartialEq, former::Former ) ]
pub enum EnumWithNamedFields
{
  // S0.1: Zero-field struct variant with Default behavior (expected compile error)
  VariantZeroDefault {},
}

fn main() {} // Required for trybuild